# mcp-netmeta

./: .gitignore  AGENTS.md  Dockerfile  NETMETA_VERSION  README.md  docker-compose.yml  environment.yml  pyproject.toml
docs/: UPDATING.md  USAGE.md
examples/: Linde2015.json  Senn2013.json  depression_arms.csv  diabetes_pairwise.csv  parkinson.json  parkinson_arms.csv  smoking_pairwise.csv  smokingcessation.json
src/netmeta_mcp/: __init__.py  http_server.py  r_bridge.py  server.py
